objects/Package_Services__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Type__c</fullName>
        <description>Store the Token type</description>
        <label>Allocation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunscription Token</fullName>
                </value>
                <value>
                    <fullName>GU Training Units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buy_Date__c</fullName>
        <label>Buy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case associated with the package will be stored</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>package Services</relationshipLabel>
        <relationshipName>package_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consume_Date__c</fullName>
        <label>Consume Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consume_Service_Id__c</fullName>
        <formula>Consume_Service__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consume Service Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consume_Service_Name__c</fullName>
        <formula>Consume_Service__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consume Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consume_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consume Service</label>
        <referenceTo>Consume_Service__c</referenceTo>
        <relationshipLabel>package Services</relationshipLabel>
        <relationshipName>package_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>DATE(YEAR(Start_Date__c)+FLOOR((MONTH(Start_Date__c)+ 12-1)/12), 
MOD(MONTH(Start_Date__c)+ 12-1,12)+1, 
DAY(Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Available__c</fullName>
        <formula>IF(TEXT(Status__c) = &apos;Allocated&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Self_Serve_Element__c</fullName>
        <formula>Product_Group_Item__r.Is_Self_Serve__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Self Serve Element</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <formula>IF((Order__c!=&apos;&apos; &amp;&amp; ISPICKVAL(Order__r.NRO_Type__c,&apos;Service Element Use&apos;)),Order__r.Original_Parent_Order1__r.Offering_Type__c,IF((Order__c!=&apos;&apos; &amp;&amp; ISPICKVAL(Order__r.NRO_Type__c,&apos;&apos;)),Order__r.Offering_Type__c,PureSuccess_Package__r.Order__r.Offering_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <formula>if(Order__r.Id != null &amp;&amp; Order__r.Id != &apos;&apos; , Order__r.Id, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrderID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Name__c</fullName>
        <formula>Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>package Services</relationshipLabel>
        <relationshipName>package_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look Upon Product Group Item for GU Training Unit</description>
        <label>Product Group Item</label>
        <referenceTo>Product_Group_Item__c</referenceTo>
        <relationshipLabel>package Services</relationshipLabel>
        <relationshipName>package_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>package Services</relationshipLabel>
        <relationshipName>package_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>package Services</relationshipLabel>
        <relationshipName>package_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PureSuccess_Package__c</fullName>
        <label>PureSuccess Package</label>
        <referenceTo>Pure_Success_Package__c</referenceTo>
        <relationshipLabel>package Services</relationshipLabel>
        <relationshipName>package_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>IF(Order__c!=&apos;&apos;, Order__r.Date_Accepted__c,PureSuccess_Package__r.Order__r.Date_Accepted__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Consumed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Order Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token_Value__c</fullName>
        <description>Get the token Value if the Allocation type is GU Training Units and Token Value &gt; 0 then get the value</description>
        <formula>IF(OR(ISPICKVAL(Product_Group_Item__r.Allocation_type__c,&quot;GU Training Units&quot;),ISPICKVAL(Product_Group_Item__r.Allocation_type__c,&quot;Subscription Token&quot;),  Product_Group_Item__r.Token_Value__c &gt; 0),Product_Group_Item__r.Token_Value__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Date__c</fullName>
        <label>Use Date</label>
        <type>Date</type>
    </fields>
    <label>Package Services</label>
    <nameField>
        <label>Package Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>package Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>